button curssor changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
         <div class="container flex items-center justify-between py-4 px-4 md:px-12 lg:px-24 xl:px-44 mx-auto">
           <img src="assests/images/logo.png" alt="Logo" class="w-16 sm:w-40">
-          <button onclick="document.location='#join'" class="border-solid border-2 border-snowfoll text-balck py-1 px-4 rounded-lg ">Join</button>
+          <button onclick="document.location='#join'" class="border-solid border-2 cursor-pointer border-snowfoll text-balck py-1 px-4 rounded-lg ">Join</button>
         </div>
       </header>
 
