--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div id="join" class="py-4  bg-gradient-to-r from-snowfollg1 to-snowfollg2">
           <div class="w-full py-12 px-4  mx-auto">
 
-            <div class="w-11/12  flex flex-col xl:flex-row mx-auto px-12 py-8 lg:py-20 text-gray-500 bg-formbg rounded-2xl">
+            <div class="md:w-11/12  flex flex-col xl:flex-row mx-auto px-4 md:px-12 py-8 lg:py-20 text-gray-500 bg-formbg rounded-2xl">
         
               <div class="w-full mb-6 xl:mb-0 text-center lg:text-start">
         
