--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <!-- section 1 -->
       <div class="py-4 lg:h-screen lg:flex lg:items-center">
          <div class="container px-4  mx-auto flex flex-col md:flex-row md:justify-between gap-4 lg:gap-12  items-center ">
-            <div class="w-full md:w-3/5">
-               <img src="assests/images/Home-page-s.png" alt="Image" >
+            <div class="w-full md:w-3/5 p-4">
+               <img src="assests/images/home-first-section.png" alt="Image" >
             </div>
             <div class="w-full md:w-2/5 mt-4 md:mt-0">
                <h1 class=" text-xl lg:text-3xl font-bold mb-4 text-gray-800 tracking-wide" style="line-height:44px; ">The border less <span  class="bg-gradient-to-b from-white to-snowfollsec text-black font-extrabold">Credit Card</span> for global families</h1>
@@ -431,13 +431,13 @@
                   <h3 class="text-lg  font-extrabold">Atul Savalia</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl px-4 pb-8 pt-4">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">
                     Atul is an Aerospace grad from IIT (2009) and MBA grad from UNC (2019).
 He has 14 years of experience working as a consultant across 4 countries (US, UK, UAE, and India) and serving banking clients, such as   Capital One, Barclays, Moody’s, RBI, and SBI. He has also led critical roles with ISRO
  (NASA equivalent of India) on Space Shuttle Aerodynamics and with Walmart on Marketing.
                     </p>
-                  <a href="#">
+                  <a href="www.linkedin.com/in/atul-savalia" target="_blank">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
@@ -450,16 +450,16 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
                   <h3 class="text-lg  font-extrabold">Nachi</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl px-4 pb-28 pt-4 ">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">
                     He is our CTO and a go-to guy for building any credit card product. Given his 2 decades of experience in tech and finance, he is pro at credit card program. Rumor is that he can build credit card programs in his sleep, having built it more than twice already!
 
                     </p>
-                  <a href="#">
+                  <!-- <a href="#">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
-                  </a>
+                  </a> -->
                </div>
             </div>
             <div class="p-6 bg-white">
@@ -468,14 +468,14 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
                   <h3 class="text-lg  font-extrabold">Julian</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl px-4 pb-48 pt-4 ">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">He is our Chief Compliance Officer. He has served the US compliance industry over 25 years, with latest being Wells Fargo.
                   </p>
-                  <a href="#">
+                  <!-- <a href="#">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
-                  </a>
+                  </a> -->
                </div>
             </div>
             <div class="p-6 bg-white ">
@@ -484,10 +484,10 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
                   <h3 class="text-lg  font-extrabold">Brent Reynolds</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl px-4 pt-4 pb-16 ">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">
                     Brent is an ex-Capital One veteran, and advisor to Snowfoll. He has served 16 years with Capital One credit card program.</p>
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/brent-reynolds-38a628/" target="_blank">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
@@ -500,12 +500,12 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
                   <h3 class="text-lg  font-extrabold">Stewart Sui</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl px-4 pt-4 pb-7 ">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">
                     Stewart Sui
                     Stewart is an ex-HSBC and TransUnion, and an advisor to Snowfoll. He has been a mentor and employer to Atul and Nachi in their prior fintech organization in the US.
                   </p>
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/stewart-sui-756354a/" target="_blank">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
@@ -518,9 +518,9 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
                   <h3 class="text-lg  font-extrabold">Tyler Mantel</h3>
                </div>
                <hr class="h-1 w-full mx-auto mb-4 bg-snowfollsec" style="max-width: 170px;">
-               <div class="rounded shadow-xl p-4 ">
+               <div class="rounded shadow-xl p-4 px-4 pt-4 pb-16">
                   <p class="text-gray-600 mb-8 text-sm lg:pr-8">Tyler is an serial entrepreneur and 2X founder. He is an advisor to Snowfoll, and also an Harvard Fellow.</p>
-                  <a href="#">
+                  <a href="https://www.linkedin.com/in/tyler-mantel/" target="_blank">
                      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24H22.225c.979 0 1.771-.773 1.771-1.729v-20.542c0-.955-.792-1.729-1.771-1.729z"/>
                      </svg>
@@ -537,28 +537,28 @@ He has 14 years of experience working as a consultant across 4 countries (US, UK
             <footer class="p-4  shadow  dark:bg-gray-900">
                <div class="sm:flex sm:items-center sm:justify-between">
                   <a href="#" class="flex items-center mb-4 sm:mb-0">
-                  <img src="assests/images/footer-logo.png" class="h-6 mr-3" alt="snowfoll-logo">
+                  <img src="assests/images/Clip path group.svg" class="h-6 mr-3" alt="snowfoll-logo">
                   </a>
                   <ul class="flex flex-wrap items-center pb-6 mt-6 gap-2 text-sm text-white sm:mb-0 dark:text-gray-400">
                      <li>
                         <a href="#" class="mr-4 hover:underline md:mr-6 ">Home</a>
                      </li>
                      <li>
-                        <a href="#feature" class="mr-4 hover:underline md:mr-6">Company</a>
+                        <a href="#feature" class="mr-4 hover:underline md:mr-6">Terms & Conditions</a>
                      </li>
                      <li>
-                        <a href="#benefits" class="mr-4 hover:underline md:mr-6 ">Privacy Policy</a>
+                        <a href="https://www.snowfoll.com/privacy-policy" target="blank" class="mr-4 hover:underline md:mr-6 ">Privacy Policy</a>
                      </li>
                   </ul>
                </div>
-               <div class="flex mt-4 space-x-2 sm:mt-0 pl-4">
-                  <a href="#" target="blank" class="text-white hover:text-gray-200 dark:hover:text-white">
+               <div class="flex mt-4 space-x-2 sm:mt-0 ">
+                  <a href="https://www.facebook.com/snowfollcard" target="blank" class="text-white hover:text-gray-200 dark:hover:text-white">
                      <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd"></path>
                      </svg>
                      <span class="sr-only">Facebook page</span>
                   </a>
-                  <a href="#" target="blank" class="text-white hover:text-gray-200 dark:hover:text-white">
+                  <a href="https://www.linkedin.com/company/snowfoll" target="blank" class="text-white hover:text-gray-200 dark:hover:text-white">
                      <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="21" height="21" viewBox="0 0 30 30" style="fill:#FFFFFF;">
                         <path d="M9,25H4V10h5V25z M6.501,8C5.118,8,4,6.879,4,5.499S5.12,3,6.501,3C7.879,3,9,4.121,9,5.499C9,6.879,7.879,8,6.501,8z M27,25h-4.807v-7.3c0-1.741-0.033-3.98-2.499-3.98c-2.503,0-2.888,1.896-2.888,3.854V25H12V9.989h4.614v2.051h0.065 c0.642-1.18,2.211-2.424,4.551-2.424c4.87,0,5.77,3.109,5.77,7.151C27,16.767,27,25,27,25z"></path>
                      </svg>
