--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                </div>
                <div class="w-full md:w-1/3 ">
                   <div class=" text-center">
-                     <img src="assests/images/Phone.png" alt="Image 2" class="w-full mt-3">
+                     <img src="assests/images/Global card.png" alt="Image 2" class="w-full mt-3 p-4">
                   </div>
                </div>
                <div class="w-full md:w-1/3 ">
