--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       <!-- section 1 -->
       <div class="py-4 lg:h-screen lg:flex lg:items-center bg-homesection">
          <div class="container px-4  mx-auto flex flex-col md:flex-row md:justify-between gap-4 lg:gap-12  items-center ">
-            <div class="w-full md:w-3/5 p-4">
-               <img src="assests/images/home section.png" alt="Image" style="width:100%; max-width: 510px;">
+            <div class="w-full md:w-3/5 p-4 ">
+               <img class="mx-auto sm:mx-0" src="assests/images/home section.png" alt="Image" style="width:100%; max-width: 510px;">
             </div>
             <div class="w-full md:w-2/5 mt-4 md:mt-0">
                <h1 class=" text-xl lg:text-3xl font-bold mb-4 text-gray-800 tracking-wide" style="line-height:44px; ">The border less <span  class="bg-gradient-to-b from-white to-snowfollsec text-black font-extrabold">Credit Card</span> for global families</h1>
